# games

./: CMakeLists.txt  readme.md
asset/shader/: model.vert  modelPointLight.frag  modelUnlit.frag
games101/: AppGame101.cpp  BaseScene.cpp  BaseScene.h
games101/1_Transform/: TransformScene.cpp  TransformScene.h  Triangle.cpp  Triangle.hpp  rasterizer.cpp  rasterizer.hpp
games101/2_Rasterize/: RasterizerScene.cpp  RasterizerScene.h  Triangle.cpp  Triangle.hpp  rasterizer.cpp  rasterizer.hpp
games101/3_Shading/: OBJ_Loader.h  Shader.hpp  ShadingScene.cpp  ShadingScene.h  Texture.hpp  Triangle.cpp  Triangle.hpp  global.hpp  rasterizer.cpp  rasterizer.hpp
games101/4_Geometry/: GeometryScene.cpp  GeometryScene.h
games101/5_RayIntersection/: Light.hpp  Object.hpp  RayIntersectionScene.cpp  RayIntersectionScene.h  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp
games101/6_RaytracingBVH/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  Intersection.hpp  Light.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  Ray.hpp  RaytracingBVHScene.cpp  RaytracingBVHScene.h  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.cpp  Vector.hpp  global.hpp
games101/7_PathTracing/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  Intersection.hpp  Light.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  PathTracingScene.cpp  PathTracingScene.h  Ray.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  (+3 more)
games202/: AppGame202.cpp  BaseScene.cpp  BaseScene.h
src/: App.cpp  App.h
(+20 files in other folders)
